--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link href='https://fonts.googleapis.com/css?family=Merriweather:900,400' rel='stylesheet' type='text/css'>
 </head>
 <body>
-	<header class="container">
+	<header class="container navbar-fixed-top">
 		<div class="row">
 			<h1 class="col-sm-6">Community italiana di CS:GO</h1>
 			<nav class="col-sm-6 text-right">
@@ -47,6 +47,26 @@
 			</figure>
 			<figure class="col-sm-6">
 				<p>...news4...</p>
+				<img src="#">
+			</figure>
+		</div>
+        <div class="row">
+			<figure class="col-sm-6">
+				<p>...news5...</p>
+				<img src="#">
+			</figure>
+			<figure class="col-sm-6">
+				<p>...news6...</p>
+				<img src="#">
+			</figure>
+		</div>
+        <div class="row">
+			<figure class="col-sm-6">
+				<p>...news7...</p>
+				<img src="#">
+			</figure>
+			<figure class="col-sm-6">
+				<p>...news8...</p>
 				<img src="#">
 			</figure>
 		</div>
