--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<title>Community italiana di CS:GO</title>
-	<meta charset="utf-8"/>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script> 
+    <meta charset="utf-8"/>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<link href='https://fonts.googleapis.com/css?family=Merriweather:900,400' rel='stylesheet' type='text/css'>
@@ -10,7 +11,7 @@
 <body>
 	<header class="container navbar-fixed-top">
 		<div class="row">
-			<h1 class="col-sm-6">Community italiana di CS:GO</h1>
+			<h1 class="col-sm-6">Community italiana di CS:<font color="#b87604">GO</font></h1>
 			<nav class="col-sm-6 text-right">
                 <a href="#"><p>home</p></a>
 				<a href="#"><p>eventi</p></a>
@@ -20,6 +21,17 @@
 			</nav>
 		</div>
 	</header>
+    <script>
+        $(window).scroll(function() {
+            if ($(this).scrollTop() > 1){  
+                $('header').addClass("fix");
+                $('header h1').addClass("fix");
+                }
+                else{
+                $('header').removeClass("fix");
+                $('header h1').removeClass("fix");
+                }
+        });</script>
 	<section class="jumbotron">
 		<div class="container">
 			<div class="row text-right">
