--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
     <meta charset="utf-8"/>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="main.css">
-	<link href='https://fonts.googleapis.com/css?family=Merriweather:900,400' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	<header class="container navbar-fixed-top">
 		<div class="row">
-			<h1 class="col-sm-6">Community italiana di CS:<font color="#b87604">GO</font></h1>
-			<nav class="col-sm-6 text-right">
+			<h1 class="col-sm-6">Community italiana di CS:<font color="#B87604">GO</font></h1>
+			<nav class="col-sm-6">
                 <a href="#"><p>home</p></a>
 				<a href="#"><p>eventi</p></a>
 				<a href="#"><p>gruppo steam</p></a>
@@ -41,7 +40,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="container">
+	<section class="container text-center">
 		<div class="row">
 			<figure class="col-sm-6">
 				<p>...news1...</p>
