--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 				<img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/instagram.svg">
 			</li>
 			<li class="col-sm-1">
-				<img src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-4/medium.svg">
+				<a href="steam://url/GroupSteamIDPage/103582791437518733"><img src="img/steam.svg"></a>
 			</li>
 		</ul>
 	</footer>
