--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<div class="row">
 			<h1 class="col-sm-6">Community italiana di CS:<font color="#B87604">GO</font></h1>
 			<nav class="col-sm-6">
-                <a href="#"><p>home</p></a>
+                <a href="#" class="attivo"><p>home</p></a>
 				<a href="#"><p>eventi</p></a>
 				<a href="#"><p>gruppo steam</p></a>
 				<a href="#"><p>affiliati</p></a>
