--- a/eventi.html
+++ b/eventi.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Community italiana di CS:GO</title>
+	<title>Eventi - Community italiana di CS:GO</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script> 
     <script>
         $(window).scroll(function() {
@@ -20,27 +20,18 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-	<header class="container navbar-fixed-top">
+    <header class="container navbar-fixed-top">
 		<div class="row">
 			<h1 class="col-sm-6">Community italiana di CS:<font color="#B87604">GO</font></h1>
 			<nav class="col-sm-6">
-                <a href="#" class="attivo"><p>home</p></a>
-				<a href="eventi.html"><p>eventi</p></a>
+                <a href="index.html"><p>home</p></a>
+				<a href="#" class="attivo"><p>eventi</p></a>
 				<a href="#"><p>gruppo steam</p></a>
 				<a href="#"><p>affiliati</p></a>
 				<a href="#"><p>feed rss</p></a>
 			</nav>
 		</div>
 	</header>
-	<section class="jumbotron">
-		<div class="container">
-			<div class="row text-right">
-                <h2>Titolo</h2>
-                <h3>descrizione</h3>
-                <a class="btn btn-primary" href="#" role="button">Vai</a>
-			</div>
-		</div>
-	</section>
 	<section class="container text-center">
 		<div class="row">
 			<figure class="col-sm-6">
